--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "api-key-discord": "NzUyNzA2MzAwNjIxODgxMzY0.X1biXg.pfPSX3TLZ9RlAqRygrLJTeO31-k",
-  "api-key-hypixel": "79a681b0-45fe-473a-a8a5-444e2f67edf3"
+  "api-key-discord": "",
+  "api-key-hypixel": ""
 }
